# YouTube-Transcript-Retrieval-using-CrewAI-LLM-Gemini

./: .env  README.md  pyproject.toml
result/: report.txt
src/: crew.py  main.py
src/config/: agents.yaml  tasks.yaml
src/tools/: youtube_video_search_tool.py
